designed front end components ;

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-dark bg-dark mt-5 fixed-bottom">
     <div class="navbar-expand m-auto navbar-text">
-      Made with <i class="fa fa-heart"></i> by <a href="https://twitter.com/beeman_nl">Ashish Patel</a>
+      Made in India with <i class="fa fa-heart"></i> by <a href="https://github.com/ashishpatelcs">Ashish Patel</a>
     </div>
   </nav>
