--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -1,27 +1,27 @@
 <!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>-->
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
 
-<nav class="navbar navbar-dark bg-dark ">
+<nav class="navbar navbar-dark bg-dark fixed-top">
     <a class="navbar-brand" href="/">Ashish Patel</a>
     <div class="navbar-expand mr-auto">
       <div class="navbar-nav">
         <a class="nav-item nav-link active" href="#">Home</a>
         <a class="nav-item nav-link" href="#">About Me</a>
         <a class="nav-item nav-link" href="#">Portfolio</a>
+        <a class="nav-item nav-link" href="#">Blog</a>
         <a class="nav-item nav-link" href="#">Contact</a>
       </div>
     </div>
     <div class="navbar-expand ml-auto navbar-nav">
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="https://github.com/beeman" target="_blank">
+        <a class="nav-item nav-link" href="https://github.com/ashishpatelcs" target="_blank">
           <i class="fa fa-github"></i>
         </a>
-        <a class="nav-item nav-link" href="https://twitter.com/beeman_nl" target="_blank">
-          <i class="fa fa-twitter"></i>
+        <a class="nav-item nav-link" href="https://linkedin.com/in/meetashishpatel" target="_blank">
+          <i class="fa fa-linkedin"></i>
         </a>
-        <a class="nav-item nav-link" href="https://medium.com/@beeman" target="_blank">
-          <i class="fa fa-medium"></i>
+        <a class="nav-item nav-link" href="https://facebook.com/ashishpatelcom" target="_blank">
+          <i class="fa fa-facebook"></i>
         </a>
       </div>
     </div>
